zkay/examples/type_errors/BoolToUInt.zkay
pragma zkay >=0.2.0;

contract BoolToUInt {

	function f() public {
		uint x;
		x = false;
	}

}
